cleaner organization for knowledge source
